restricted multiple calls for GetStoreDetails and GetProductList, showing the selected store name in store home page. Sunilas UI changes integration

--- a/src/app/pages/home/homecaurosel/homecaurosel.component.html
+++ b/src/app/pages/home/homecaurosel/homecaurosel.component.html
@@ -43,6 +43,7 @@
   </div>
 </div>
 <div class="container">
+  <h4 class="current-store" *ngIf="(currentStoreId !== undefined) && (storeIdInStoreDetails === currentStoreId)">Current Store: <span>{{storeDetails?.StoreName}}</span></h4>
   <div id="myCarousel" class="carousel slide row">
     <!-- <ol class="carousel-indicators">
       <li data-target="#myCarousel"   [ngClass]="{'active' : i == 0}" *ngFor="let event of eventList; let i = index"></li>
