--- a/src/app/pages/landing-page/home-links/home-links.component.scss
+++ b/src/app/pages/landing-page/home-links/home-links.component.scss
@@ -1,5 +1,6 @@
 .banner{ 
     background: url(../../../../assets/landing-page-images/bg-sodr.png) repeat-x left top #e91d24; margin-bottom: 30px; padding: 150px 0 30px 0;
+    background-size: contain;
     } 
 .text-center{ text-align: center; color: #fff;}   
 .icon-block{ height: 150px;}
