--- a/src/app/pages/landing-page/store-locations/store-locations.component.html
+++ b/src/app/pages/landing-page/store-locations/store-locations.component.html
@@ -8,7 +8,7 @@
           <a class="search-icon">
             <i class="fa fa-search"></i>
           </a>
-          <input type="text" class="form-control" placeholder="Enter a address, city or zip code" autocorrect="off"
+          <input type="text" class="form-control" placeholder="Search by Address, City or Zip Code" autocorrect="off"
             autocapitalize="off" spellcheck="off" type="text" [(ngModel)]="searchText" #search>
         </td>
         <!-- <td class="filter"><img src="../../../assets/landing-page-images/icon-filter.png"> Filter</td> -->
