--- a/src/app/pages/landing-page/store/store.component.scss
+++ b/src/app/pages/landing-page/store/store.component.scss
@@ -3,7 +3,7 @@
 h4{ color: #e91d24; text-align: center; font-family: 'CubanoRegular'; font-size: 2em; font-weight: normal; text-transform: uppercase; margin-bottom: 30px;}
 h4.text-right{ margin-right: 9%; font-family: 'CubanoRegular'; font-size: 3em; text-align: right; width: 100%; float:right;}
 .margin40{ margin: 40px 0;}
-.btn-default{background: #64676d; font-family: 'CubanoRegular';  color: #fff; text-transform: uppercase; font-weight:normal; font-size: 2em; margin-top: 30px; padding: 10px 20px;}
+.btn-default{background: #64676d; font-family: 'CubanoRegular';  color: #fff; text-transform: uppercase; font-weight:normal; font-size: 2em; margin: 30px 0; padding: 10px 20px;}
 .btn-default:hover{ opacity: 0.8;}
 a {
   text-decoration: none;
