--- a/src/app/pages/products/advance-filter/advance-filter.component.html
+++ b/src/app/pages/products/advance-filter/advance-filter.component.html
@@ -165,7 +165,7 @@
 
         </div>
 
-        <div class="Main_bottlesection">
+        <div class="Main_bottlesection mixers">
           <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 mbottom15" *ngFor="let product of productsList">
               <app-product [item]="product"></app-product>
