--- a/src/app/pages/products/feature-products/feature-products.component.html
+++ b/src/app/pages/products/feature-products/feature-products.component.html
@@ -13,7 +13,7 @@
     <div *ngIf="productsList?.length > 0">
       <div class="row">
         <div class="col-md-12">
-        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 margin-bottom-20" *ngFor="let product of productsList">
+        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 margin-bottom-20 fpimg" *ngFor="let product of productsList">
         <app-product [item]="product"></app-product>
       </div>
     </div>
